# tscg-bench

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml
fixtures/tools/: mcp_filesystem.json  mid_20tools.json  small_5tools.json
notebooks/: 01_reproduce_compression.ipynb
src/tscg_bench/: __init__.py  bench.py  bridge.mjs  compiler.py
src/tscg_pybench/: __init__.py  bench.py  catalog.py  tokens.py
tests/: test_bench.py  test_catalog.py  test_compiler.py
