[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tscg-bench"
version = "0.1.0"
description = "Independent Python reproduction of the TSCG paper's tool-schema compression claims."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Rakesh", email = "rake.kv93@gmail.com" }]
keywords = ["llm", "tool-use", "agentic", "tscg", "function-calling", "token-efficiency"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
tokens = ["tiktoken>=0.7.0"]
plot = ["pandas>=2.0", "matplotlib>=3.7"]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "tiktoken>=0.7.0",
  "pandas>=2.0",
  "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/rake93/tscg-bench"
Issues = "https://github.com/rake93/tscg-bench/issues"
"TSCG Paper" = "https://arxiv.org/abs/2605.04107"
"TSCG Reference Impl" = "https://github.com/SKZL-AI/tscg"

[tool.hatch.build.targets.wheel]
packages = ["src/tscg_bench"]

[tool.hatch.build.targets.wheel.shared-data]
"src/tscg_bench/bridge.mjs" = "tscg_bench/bridge.mjs"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]
